--- a/advice.html
+++ b/advice.html
@@ -3,6 +3,12 @@
     <title>The Small Web ~ Advice</title>
     <meta charset="utf-8">
     <meta name="viewport" content="device=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://smallweb.page/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Small Web" />
+    <meta property="og:description" content="Enter the small web" />
+    <meta property="og:image" content="https://smallweb.page/img/thumb.png" />
+    <meta property="twitter:card" content="summary_large_image">
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 </head> 
