--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <title>The Small Web</title>
         <meta charset="utf-8">
         <meta name="viewport" content="device=device-width, initial-scale=1.0">
+        <meta property="og:url" content="https://smallweb.page/" />
+        <meta property="og:type" content="article" />
+        <meta property="og:title" content="Small Web" />
+        <meta property="og:description" content="Enter the small web" />
+        <meta property="og:image" content="https://smallweb.page/img/thumb.png" />
+        <meta property="twitter:card" content="summary_large_image">
+
         <link href="./css/styles.css" rel="stylesheet">
     </head>
     <body>
@@ -14,7 +21,6 @@
                         <a href="home.html">
                             <img src="img/assets/desktop1.svg" alt="desktop computer" class="desktopComp">
                         </a>
-                        
                             <figcaption>
                                 Click to enter the shrine
                             </figcaption>
