--- a/why.html
+++ b/why.html
@@ -4,6 +4,12 @@
     <title> Guide </title>
     <meta charset="utf-8">
     <meta name="viewport" content="device=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://smallweb.page/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Small Web" />
+    <meta property="og:description" content="Enter the small web" />
+    <meta property="og:image" content="https://smallweb.page/img/thumb.png" />
+    <meta property="twitter:card" content="summary_large_image">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">
     <link href="css/print.css" rel="stylesheet" type="text/css" media="print"> 
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
